--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3ff3c3" />
-    <meta name="title" content="Prathmesh Dhatrak" />
+    <meta name="title" content="Pranav Shelke" />
     <meta
       name="description"
-      content="Prathmesh Dhatrak is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
+      content="Pranav Shelke is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
     />
-    <meta name="keywords" content="prathmesh, dhatrak, portfolio, personal website, Prathmesh Dhatrak" />
+    <meta name="keywords" content="prathmesh, dhatrak, portfolio, personal website, Pranav Shelke" />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
-    <meta name="author" content="Prathmesh Dhatrak" />
+    <meta name="author" content="Pranav Shelke" />
 
     <meta name="msapplication-TileColor" content="#3ff3c3" />
     <meta
@@ -59,14 +59,14 @@
       rel="apple-touch-icon"
       href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/apple-touch-icon_fz8jtc.png"
     />
-    <title>Prathmesh Dhatrak</title>
+    <title>Pranav Shelke</title>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://prathmeshdhatrak.com/" />
-    <meta property="og:title" content="Prathmesh Dhatrak" />
+    <meta property="og:url" content="https://pranavshelke.com/" />
+    <meta property="og:title" content="Pranav Shelke" />
     <meta
       property="og:description"
-      content="Prathmesh Dhatrak is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
+      content="Pranav Shelke is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
     />
     <meta
       property="og:image"
@@ -77,11 +77,11 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="Portfolio website" />
     <meta property="twitter:type" content="website" />
-    <meta property="twitter:url" content="https://prathmeshdhatrak.com/" />
-    <meta property="twitter:title" content="Prathmesh Dhatrak" />
+    <meta property="twitter:url" content="https://pranavshelke.com/" />
+    <meta property="twitter:title" content="Pranav Shelke" />
     <meta
       property="twitter:description"
-      content="Prathmesh Dhatrak is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
+      content="Pranav Shelke is an result-oriented and self-motivated full-stack software engineer, interested in designing and building beautiful and functional web applications."
     />
     <meta
       property="twitter:image"
