--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
-    <link
-      rel="manifest"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/raw/upload/v1652160805/portfolio%20folder/icons/manifest_eblzug.json"
-    />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#3ff3c3" />
     <meta name="title" content="Pranav Shelke" />
@@ -24,40 +18,40 @@
     <meta name="msapplication-TileColor" content="#3ff3c3" />
     <meta
       name="msapplication-TileImage"
-      content="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652157982/portfolio%20folder/logo-w_150_ww4hpa.png"
+      content="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <link
       rel="icon"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/favicon_c4mifc.ico"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/android-chrome-192x192_duqslr.png"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160805/portfolio%20folder/icons/android-chrome-512x512_iwkx49.png"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/favicon-32x32_eg1rlq.png"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/favicon-16x16_fsndxw.png"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
 
     <link
       rel="apple-touch-icon"
-      href="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652160804/portfolio%20folder/icons/apple-touch-icon_fz8jtc.png"
+      href="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <title>Pranav Shelke</title>
     <!-- Open Graph / Facebook -->
@@ -70,7 +64,7 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652157982/portfolio%20folder/logo-w_150_ww4hpa.png"
+      content="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <meta property="og:image:width" content="120" />
     <meta property="og:image:height" content="120" />
@@ -85,7 +79,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://res.cloudinary.com/prathmeshdhatrak-com/image/upload/v1652157982/portfolio%20folder/logo-w_150_ww4hpa.png"
+      content="https://res.cloudinary.com/dciaa1de2/image/upload/v1686062271/logo-w_250_prjnej.png"
     />
     <!-- meta tags ended -->
   </head>
